--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<div class="nav3 col-md-4">
 				<div id="login" class="login col-md-2"><a href="#"><i class="fa fa-user"></i></a>
 				<ul id="subnav">
-					<li><a href="#">登录</a></li>
+					<li><a href="登录.html">登录</a></li>
 					<li><a href="注册.html">注册</a></li>
 				</ul>
 				</div>
@@ -57,26 +57,41 @@
 		<a href="#" class="item"><img src="img/h5.jpg" alt=""></a>
 		<a href="#" class="item"><img src="img/h6.png" alt=""></a>
 	</div>
-	<div class="details">
+	<div class="details container">
 		<ul>
-			<a href="#"><img src="img/01.jpg" alt=""></a>
-			<li><a href="#">小牛电动M1 产品详情</a></li>
-			<span><a href="#">了解小牛电动M1出色的设计与全新科技</a></span>
-		</ul>
-		<ul>
-			<a href="#"><img src="img/02.jpg" alt=""></a>
-			<li><a href="#">最全的小牛日常保养技巧</a></li>
-			<span><a href="#">让你的爱车清凉一夏</a></span>
-		</ul>
-		<ul>
-			<a href="#"><img src="img/03.jpg" alt=""></a>
-			<li><a href="#">官方商城 配件上新</a></li>
-			<span><a href="#">满499元免运费</a></span>
-		</ul>
-		<ul>
-			<a href="#"><img src="img/04.jpg" alt=""></a>
-			<li><a href="#">【活动】购物车“1111”大作战</a></li>
-			<span><a href="#">晒购物车抢千元优惠</a></span>
+			
+			<li>
+				<div>
+					<a href="#"><img src="img/01.jpg" alt=""></a>
+				</div>
+				<p><a href="#">小牛电动M1 产品详情</a></p>
+				<span><a href="#">了解小牛电动M1出色的设计与全新科技</a></span>
+			</li>
+
+			<li>
+				<div>
+					<a href="#"><img src="img/02.jpg" alt=""></a>
+				</div>
+				<p><a href="#">最全的小牛日常保养技巧</a></p>
+				<span><a href="#">让你的爱车清凉一夏</a></span>
+			</li>
+
+			<li>
+				<div>
+					<a href="#"><img src="img/03.jpg" alt=""></a>
+				</div>
+				<p><a href="#">官方商城 配件上新</a></p>
+				<span><a href="#">满499元免运费</a></span>
+			</li>
+
+			<li>
+				<div>
+					<a href="#"><img src="img/04.jpg" alt=""></a>
+				</div>
+				<p><a href="#">【活动】购物车“1111”大作战</a></p>
+				<span><a href="#">晒购物车抢千元优惠</a></span>
+			</li>
+				
 		</ul>
 	</div>
 	<div class="footer container clearfix">
